[package]
name = "fuse-overlayfs"
version = "2.0.0"
edition = "2024"
rust-version = "1.85.0"
license = "GPL-2.0-or-later"
description = "Overlay Filesystem in Userspace"
repository = "https://github.com/containers/fuse-overlayfs"
homepage = "https://github.com/containers/fuse-overlayfs"
readme = "README.md"
keywords = ["fuse", "overlayfs", "filesystem", "containers"]
categories = ["filesystem"]
exclude = [
    ".github/",
    "tests/",
    "clippy",
    "Containerfile.*",
    "AGENTS.md",
]

[dependencies]
fuser = { version = "0.17.0", features = ["abi-7-40"] }
rustix = { version = "1.1", features = ["process"] }
libc = "0.2.183"
signal-hook = "0.3.18"
parking_lot = "0.12.5"
log = "0.4.29"
env_logger = "0.11.9"
thiserror = "2.0.18"
rustc-hash = "2.1.1"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
lto = true
strip = true
